; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_main.c_ice_vsi_fltr_changed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_main.c_ice_vsi_fltr_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ice_vsi = type { i32 }

@ICE_VSI_FLAG_UMAC_FLTR_CHANGED = common dso_local global i32 0, align 4
@ICE_VSI_FLAG_MMAC_FLTR_CHANGED = common dso_local global i32 0, align 4
@ICE_VSI_FLAG_VLAN_FLTR_CHANGED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ice_vsi*)* @ice_vsi_fltr_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ice_vsi_fltr_changed(%struct.ice_vsi* %0) #0 {
  %2 = alloca %struct.ice_vsi*, align 8
  store %struct.ice_vsi* %0, %struct.ice_vsi** %2, align 8
  %3 = load i32, i32* @ICE_VSI_FLAG_UMAC_FLTR_CHANGED, align 4
  %4 = load %struct.ice_vsi*, %struct.ice_vsi** %2, align 8
  %5 = getelementptr inbounds %struct.ice_vsi, %struct.ice_vsi* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @test_bit(i32 %3, i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %23, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ICE_VSI_FLAG_MMAC_FLTR_CHANGED, align 4
  %11 = load %struct.ice_vsi*, %struct.ice_vsi** %2, align 8
  %12 = getelementptr inbounds %struct.ice_vsi, %struct.ice_vsi* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @test_bit(i32 %10, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %9
  %17 = load i32, i32* @ICE_VSI_FLAG_VLAN_FLTR_CHANGED, align 4
  %18 = load %struct.ice_vsi*, %struct.ice_vsi** %2, align 8
  %19 = getelementptr inbounds %struct.ice_vsi, %struct.ice_vsi* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @test_bit(i32 %17, i32 %20)
  %22 = icmp ne i64 %21, 0
  br label %23

23:                                               ; preds = %16, %9, %1
  %24 = phi i1 [ true, %9 ], [ true, %1 ], [ %22, %16 ]
  %25 = zext i1 %24 to i32
  ret i32 %25
}

declare dso_local i64 @test_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
